# c_engine

./: CMakeLists.txt  README.md  main.cpp
_docs/: todo.txt
data/shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl  gui_vertex_shader.glsl  vertex_color_frag_shader.glsl
include/core/: core.h  engine_manager.h  input.h  time.h  transform.h  types.h  video.h
include/graphics/: cameras.h  main_gl.h  materials.h  models.h  obj_loader.h  textures.h
include/utilities/: collections.h  log.h  util.h
source/core/: engine_manager.cpp  input.cpp  time.cpp  transform.cpp  video.cpp
source/graphics/: cameras.cpp  main_gl.cpp  materials.cpp  models.cpp  textures.cpp
source/utilities/: util.cpp
